# recmed2

./: .gitignore  README.md  gitignore  mypy.ini  pyproject.toml
src/: main.py
src/_rc/: __init__.py  resource.qrc  resource_rc.py
src/config/: appconfig.py  configitem.py
src/contentwidget/: __init__.py  cwloader.py  cwpluginapi.py  templatetag.py
src/descriptivecontrol/: __init__.py  dbool.py  dcolor.py  descriptor.py  dicon.py  dstr.py  dtypes.py
src/logger/: __init__.py  loggingserver.py
src/modelview/: __init__.py  fieldlinedelegate.py  fieldmodel.py  icondelegate.py  iconmodel.py
src/pluginhelper/: [DEPRECATED] pluginhelper.py  [DEPRECATED] pluginimporter.py  __init__.py  pluginhelper.py  pluginimporter.py
src/recmedtyping/: __init__.py  defines.py  icontype.py
src/tag/: tag.py
src/test/: test_colorpicker.py  test_colorwheel.py  test_field.py  test_iconselector.py  test_metadatawidget.py  test_tag.py  test_toolarea.py
src/ui/: __init__.py  colorlineedit.py  colorpicker.py  colorpickerpopup.py  colorwheel.py  colorwheelpopup.py  contentarea.py  contenttemplateeditor.py  contentwidgetcontainer.py  docmetadatawidget.py  document.py  documentbrowser.py  documentcontent.py  documentwidget.py  fieldarea.py  fieldkey.py  fieldline.py  iconselector.py  metadatawidget.py  openeddockwidget.py  pilltagwidget.py  recmed.py  recmed.ui  recmed_ui.py  recmedapp.py  recmedtitlebar.py  sidespace.py  tagarea.py  tagcontainer.py  tageditor.py  titlearea.py  toolarea.py
src/utils/: __init__.py  clearlogs.py  colorutils.py  createcontentwidgethelper.py  (+2 more)
(+56 files in other folders)
